# mirror_recognition

./: CMakeLists.txt  README.md  package.xml  requirements.txt
cfg/: PublishRawDataset.cfg
config/: mirror_marker.yaml  mirror_names.yaml  object_names.yaml
datasets/: __init__.py  labeled_mirror.py  labeled_mirror_object.py  mirror_3d_annotated.py  multi_view_mirror_3d_annotated.py  transparent_object_3d_annotated.py  transparent_objects.py  transparent_objects_3d_annotated.py
euslisp/: collect-images-semi-automatically-by-pr2.l
include/mirror_recognition/: point_cloud_mirror_flipper.h
launch/: collect_images_semi_automatically_with_pr2_kinect.launch  collect_images_with_astra.launch  collect_images_with_pr2_kinect.launch  fcn_mirror_object_segmentation.launch  mirror_object_segmentation_by_astra.launch  mirror_segmentation_by_astra.launch  mirror_segmentation_by_pr2_kinect.launch  mirror_segmentation_depth_estimation_by_pr2_kinect.launch  mirror_segmentation_with_depth_by_astra.launch  mirror_segmentation_with_depth_by_pr2_kinect.launch  object_3d_annotation.launch  point_cloud_from_fused_cloud_mirror_flipper_by_pr2_kinect.launch  point_cloud_from_tilt_scan_mirror_flipper_by_pr2_kinect.launch  point_cloud_from_wide_stereo_mirror_flipper_by_pr2_kinect.launch  point_cloud_mirror_flipper_by_astra.launch  point_cloud_mirror_flipper_by_pr2_kinect.launch  rosbag_play_point_cloud_from_fused_cloud_mirror_flipper_by_pr2_kinect.launch  rosbag_record_pr2.launch
launch/include/: fcn_at_once_concat_at_once.launch  fcn_mirror_object_segmentation.launch  fcn_mirror_segmentation.launch  fcn_mirror_segmentation_depth_estimation.launch  fcn_mirror_segmentation_with_depth.launch  plane_estimation.launch  point_cloud_mirror_flipper.launch  publish_raw_dataset.launch  save_object_pose.launch
learning_scripts/: 00_move_mesh_pose_yaml.py  01_split_raw_data.py  02_make_labeled_mirror_dataset_from_json.py  02_make_labeled_mirror_object_dataset_from_json.py  02_make_labeled_mirror_with_depth_dataset_from_json.py  02_make_mirror_3d_annotated_dataset.py  02_make_mirror_3d_annotated_multi_view_dataset.py  02_make_multi_view_mirror_3d_annotated_dataset.py  dot_to_png.py  infer.py  infer_fcn8s_bthesis.py  infer_fcn8s_mirror_segmentation.py  infer_fcn8s_mirror_segmentation_depth_estimation.py  infer_fcn8s_mirror_segmentation_with_depth.py  infer_fcn8s_multi_view_mirror_segmentation_depth_estimation.py  make_dataset_from_json.py  make_labeled_mirror_dataset_from_json.py  summarize_logs_fcn8s_bthesis.py  summarize_logs_fcn8s_mirror_object_segmentation.py  summarize_logs_fcn8s_mirror_segmentation.py  summarize_logs_fcn8s_mirror_segmentation_depth_estimation.py  summarize_logs_fcn8s_multi_view_mirror_segmentation_depth_estimation.py  train_fcn8s_bthesis.py  train_fcn8s_mirror_object_segmentation.py  train_fcn8s_mirror_segmentation.py  train_fcn8s_mirror_segmentation_depth_estimation.py  train_fcn8s_mirror_segmentation_with_depth.py  train_fcn8s_multi_view_mirror_segmentation_depth_estimation.py  utils.py  view_labeled_mirror_dataset.py  view_labeled_mirror_object_dataset.py  view_labeled_mirror_with_depth_dataset.py  view_log.py  view_log_fcn8s_bthesis.py  view_log_fcn8s_mirror_segmentation_depth_estimation.py  view_log_fcn8s_mirror_segmentation_with_depth.py  view_mirror_3d_annotated_dataset.py  view_multi_view_mirror_3d_annotated_dataset.py  view_transparent_objects_3d_annotated.py
models/: __init__.py  fcn8s.py  fcn8s_bthesis.py  fcn8s_mirror_depth_estimation.py  fcn8s_mirror_object_segmentation.py  fcn8s_mirror_segmentation.py  fcn8s_mirror_segmentation_depth_estimation.py  fcn8s_mirror_segmentation_with_depth.py  fcn8s_multi_view_mirror_segmentation_depth_estimation.py
node_scripts/: assembled_scans_timer_publisher.py  fcn_at_once_concat_at_once.py  fcn_mirror_object_segmentation.py  fcn_mirror_segmentation.py  fcn_mirror_segmentation_depth_estimation.py  fcn_mirror_segmentation_with_depth.py  publish_raw_dataset.py
plugins/nodelet/: libmirror_recognition.xml
rvizconfig/: astra.rviz  mirror_object_segmentation_by_astra.rviz  mirror_segmentation_by_astra.rviz  mirror_segmentation_by_pr2_kinect.rviz  mirror_segmentation_depth_estimation_by_pr2_kinect.rviz  mirror_segmentation_with_depth_by_astra.rviz  mirror_segmentation_with_depth_by_pr2_kinect.rviz  object_3d_annotation.rviz  point_cloud_flipper_by_astra.rviz  point_cloud_flipper_by_pr2_kinect.rviz  point_cloud_from_fused_cloud_mirror_flipper_by_pr2_kinect.rviz  point_cloud_from_tilt_scan_mirror_flipper_by_pr2_kinect.rviz  point_cloud_from_wide_stereo_mirror_flipper_by_pr2_kinect.rviz  pr2_kinect.rviz  publish_raw_dataset.rviz
scripts/: install_trained_model.py
src/: point_cloud_mirror_flipper_nodelet.cpp
