<?xml version="1.0"?>
<package format="2">
  <name>mirror_recognition</name>
  <version>0.0.0</version>
  <description>The mirror_recognition package</description>

  <maintainer email="uchimi@jsk.imi.i.u-tokyo.ac.jp">Yuto Uchimi</maintainer>
  <author email="uchimi@jsk.imi.i.u-tokyo.ac.jp">Yuto Uchimi</author>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>jsk_recognition_msgs</depend>
  <depend>jsk_recognition_utils</depend>
  <depend>message_filters</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/plugins/nodelet/libmirror_recognition.xml"/>
  </export>
</package>
