<?xml version="1.0"?>
<package format="2">
  <name>mirror_recognition</name>
  <version>0.0.0</version>
  <description>The mirror_recognition package</description>

  <maintainer email="uchimi@jsk.imi.i.u-tokyo.ac.jp">Yuto Uchimi</maintainer>
  <author email="uchimi@jsk.imi.i.u-tokyo.ac.jp">Yuto Uchimi</author>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>dynamic_reconfigure</depend>
  <depend>jsk_recognition_msgs</depend>
  <depend>jsk_recognition_utils</depend>
  <depend>jsk_topic_tools</depend>
  <depend>message_filters</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>astra_launch</exec_depend>
  <exec_depend>depth_image_proc</exec_depend>
  <exec_depend>image_view</exec_depend>
  <exec_depend>jsk_data</exec_depend>
  <exec_depend>jsk_pcl_ros</exec_depend>
  <exec_depend>jsk_pcl_ros_utils</exec_depend>
  <exec_depend>jsk_perception</exec_depend>
  <exec_depend>jsk_rqt_plugins</exec_depend>
  <exec_depend>jsk_rviz_plugins</exec_depend>

  <export>
    <nodelet plugin="${prefix}/plugins/nodelet/libmirror_recognition.xml"/>
  </export>
</package>
